# lean-haskell-bindings

./: .gitignore  .travis.yml  LICENSE  README.md  lean-bindings.cabal  stack.yaml
scripts/: configure.sh  get_dependencies.sh  hackage-candidate.sh  install.sh  repl.sh  travis_script.sh
src/Language/: Lean.hs
src/Language/Lean/: Decl.chs  Env.chs  Env.hs  Exception.hs  Expr.chs  Expr.hs  FFI.chs  IOS.chs  IOS.hs  Inductive.chs  List.hs  Module.chs  Name.chs  Name.hs  Options.chs  Parser.chs  Typechecker.chs  Univ.chs
src/Language/Lean/FFI/: Exception.chs  Name.chs  String.chs
src/Language/Lean/Internal/: Decl.chs  Env.chs  Exception.chs  Expr.chs  IOS.chs  Inductive.chs  Name.chs  Options.chs  String.chs  Typechecker.chs  Univ.chs  Utils.hs
src/Language/Lean/Internal/Exception/: Unsafe.hs
test/: Main_test.hs
test/Tests/: Env.hs  Expr.hs  Name.hs  Options.hs  Univ.hs
