name: lean-bindings
version: 0.1
author: Joe Hendrix
maintainer: jhendrix@galois.com
license: Apache-2
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.9.2
description:
  This package contains Haskell bindings to the
  <http://leanprover.github.io/ Lean Theorem Prover>.

flag use-integer-simple
  description: Use this when compiling using a ghc that uses integer-simple instead of integer-gmp.
  default: False

library
  build-depends:
    base,
    bytestring,
    lens,
    text

  if flag(use-integer-simple)
     build-depends: integer-simple
  else
     build-depends: integer-gmp >= 1.0.0.0


  extra-libraries:
    leanshared
  hs-source-dirs: src
  build-tools: c2hs
  ghc-options: -Wall
  exposed-modules:
    Language.Lean
    Language.Lean.Internal.String
    Language.Lean.Internal.Exception
    Language.Lean.Internal.Name
    Language.Lean.Internal.Options
    Language.Lean.Exception
    Language.Lean.List
    Language.Lean.Name
    Language.Lean.Options
    Language.Lean.Univ

executable test
  build-depends:
    base,
    lean-bindings,
    lens,
    tasty,
    tasty-ant-xml,
    tasty-hunit

  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Main_test.hs