name: lean-bindings
version: 0.1
author: Joe Hendrix
maintainer: jhendrix@galois.com
license: Apache-2.0
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.9.2
category: Language, Formal Languages, Foreign, FFI, Theorem Provers

synopsis: Haskell bindings to the <http://leanprover.github.io/ Lean Theorem Prover>.
description:
  This package contains Haskell bindings to the
  <http://leanprover.github.io/ Lean Theorem Prover>.

source-repository head
  type: git
  location: https://github.com/GaloisInc/lean-haskell-bindings.git

flag use-integer-simple
  description: Use this when compiling using a ghc that uses integer-simple instead of integer-gmp.
  default: False

library
  build-depends:
    base >= 4.6 && < 5,
    bytestring,
    lens,
    text

  if flag(use-integer-simple)
     build-depends: integer-simple
  else
     build-depends: integer-gmp

  extra-libraries:
    leanshared
  hs-source-dirs: src
  build-tools: c2hs
  ghc-options: -Wall
  exposed-modules:
    Language.Lean
    Language.Lean.Env
    Language.Lean.Exception
    Language.Lean.Expr
    Language.Lean.List
    Language.Lean.Name
    Language.Lean.Options
    Language.Lean.Univ
    Language.Lean.Internal.String
    Language.Lean.Internal.Exception
    Language.Lean.Internal.Name
    Language.Lean.Internal.Options
    Language.Lean.Internal.Univ
    Language.Lean.Internal.Expr
    Language.Lean.Internal.Decl
    Language.Lean.Internal.Env
    Language.Lean.Internal.IOS

test-suite test
  type: exitcode-stdio-1.0
  build-depends:
    base,
    lean-bindings,
    lens,
    tasty,
    tasty-ant-xml,
    tasty-hunit
  extra-libraries:
    leanshared

  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Main_test.hs
